# news-monitor

./: .gitignore  justfile  pyproject.toml  run_monitor.bat  setup_monitor.bat  test_seoul_rss.py  test_table_ui.py  test_wintoast.py
src/: config.py  main.py
src/adapters/infrastructure/: csv_storage.py  dart_rss_scraper.py  edaily_scraper.py  hankyung_scraper.py  infostock_scraper.py  keyword_storage.py  mk_scraper.py  mt_scraper.py  newspim_scraper.py  tts_service.py  win_toast.py
src/adapters/infrastructure/scrapers/: __init__.py  base_web_scraper.py
src/adapters/infrastructure/scrapers/rss/: __init__.py  asiae_rss_scraper.py  dart_rss_scraper.py  edaily_rss_scraper.py  etoday_rss_scraper.py  hankyung_rss_scraper.py  herald_rss_scraper.py  infostock_scraper.py  mk_rss_scraper.py  newspim_rss_scraper.py  seoul_rss_scraper.py  yonhap_rss_scraper.py
src/adapters/infrastructure/scrapers/web/: __init__.py  asiae_scraper.py  edaily_scraper.py  etoday_scraper.py  fn_scraper.py  hankyung_scraper.py  herald_scraper.py  mk_scraper.py  mt_scraper.py  newspim_scraper.py  seoul_scraper.py  yonhap_scraper.py
src/config/: __init__.py  config.py  logging_config.py
src/domain/: model.py
src/domain/services/: monitor_service.py
src/infra/flet/: ui.py
src/infra/flet/components/: article_card.py  article_table.py  control_panel.py  keyword_manager.py  status_bar.py
src/infra/flet/views/: main_view.py
src/ports/: alert_port.py  news_port.py  storage_port.py
tests/: debug_scraper.py  verify_scraper.py  verify_scraper_dates.py
