[project]
name = "news-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flet[all]==0.28.3",
    "olefile>=0.47",
    "pillow>=12.0.0",
    "pystray>=0.19.5",
    "requests>=2.32.5",
    "win11toast>=0.36.2",
]
